[gd_scene load_steps=5 format=2]

[ext_resource path="res://Edge.gd" type="Script" id=1]
[ext_resource path="res://Fonts/RobotoMono-VariableFont_wght.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Edge" type="Line2D" groups=["Graph"]]
points = PoolVector2Array( 0, 0, 192, 0 )
default_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
unselected_color = Color( 1, 1, 1, 1 )
selected_color = Color( 0.662745, 1, 0.407843, 1 )
padding = 10.0

[node name="TouchBox" type="TouchScreenButton" parent="."]
shape_centered = false

[node name="WeightValue" type="Label" parent="."]
visible = false
margin_right = 18.186
margin_bottom = 41.0
theme = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[connection signal="pressed" from="TouchBox" to="." method="_on_TouchScreenButton_pressed"]
